--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "expo-dev-client": "~5.0.4"
+    "expo-dev-client": "~5.0.4",
+    "@shopify/flash-list": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
